Fixed issue w/ overflow on hamburger menu; it was causing scrollbars to show up on Windows.

--- a/less/contextMenu.less
+++ b/less/contextMenu.less
@@ -18,7 +18,6 @@
   // and bookmarks overflow menu reaching down too low.
   @usedUpChrome: @navbarHeight + @bookmarksToolbarWithFaviconsHeight;
   max-height: calc(~'100% - @{usedUpChrome}');
-  overflow: auto;
   padding: 0px 0px;
   position: absolute;
   z-index: 350;
